# Netology-Diplom-4

./: .gitignore  CMakeLists.txt  README.md
include/: foo1.h  foo2.h  foo3.h  foo4.h  safe_queue.h  thread_pool.h
src/: foo1.cpp  foo2.cpp  foo3.cpp  foo4.cpp  main.cpp  thread_pool.cpp
